# LearnDL

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
src/data/: __init__.py  ds_mnist.py  helpers.py
src/model/: __init__.py
src/model/ResNet/: _model.py
src/nursery/train/: __init__.py  _callbacks.py  _trainer.py  train.py
src/utils/: __init__.py  _data.py  _trainer.py  _utils.py
