[metadata]
name = LearnDL-package
version = "0.0.1"
author = Paul Jeha
author_email = paul.jeha@gmail.com
description = A package where I implement good coding practices in deep learning
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src